@@ -67,6 +67,7 @@ against datetimes that dont).
 count() [ticket:287]
 - deregister Table from MetaData when autoload fails; [ticket:289]
 - import of py2.5s sqlite3 [ticket:293]
+- unicode fix for startswith()/endswith() [ticket:296]
 
 0.2.7
 - quoting facilities set up so that database-specific quoting can be
